Fixed it further, added spacing on buttons

--- a/client/main.css
+++ b/client/main.css
@@ -46,7 +46,7 @@ body {
 }
 
 .ButtonWithBottomMargin{
-	margin-bottom: 30px;
+	margin-bottom: 20px;
 }
 
 .RoomJoiners{
@@ -114,7 +114,8 @@ body {
 }
 
 .NightButton{
-	margin: auto;
+	margin-left: auto;
+	margin-right: auto;
   	display: block;
 	width: 250px;
 	height: 30px;
